src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Spouse_Undergraduate__c</fullName>
        <label>Spouse Undergraduate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOLDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_Work__c</fullName>
        <label>Spouse Work #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tablet__c</fullName>
        <label>Tablet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>iPad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tail_Number__c</fullName>
        <label>Tail Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ticker_Symbol__c</fullName>
        <label>Ticker Symbol</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undergraduate__c</fullName>
        <label>Undergraduate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOLDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Type_1__c</fullName>
        <label>User Type #1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Aviation/Travel Writer</fullName>
                </value>
                <value>
                    <fullName>Aviation Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Type_2__c</fullName>
        <label>User Type #2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Publicist</fullName>
                </value>
                <value>
                    <fullName>Sports Agent</fullName>
                </value>
                <value>
                    <fullName>Entertainment Agent</fullName>
                </value>
                <value>
                    <fullName>Entertainment Manager</fullName>
                </value>
                <value>
                    <fullName>Attorney-Entertainment</fullName>
                </value>
                <value>
                    <fullName>Attorney-Divorce</fullName>
                </value>
                <value>
                    <fullName>Attorney-Aviation</fullName>
                </value>
                <value>
                    <fullName>CPA/BizMgr</fullName>
                </value>
                <value>
                    <fullName>Wealth Advisor</fullName>
                </value>
                <value>
                    <fullName>Entertainment-NY</fullName>
                </value>
                <value>
                    <fullName>Entertainment-CA</fullName>
                </value>
                <value>
                    <fullName>Entertainment-Other</fullName>
                </value>
                <value>
                    <fullName>Entertainment-Executive</fullName>
                </value>
                <value>
                    <fullName>Entertainment-Producer</fullName>
                </value>
                <value>
                    <fullName>Entertainment-Actor</fullName>
                </value>
                <value>
                    <fullName>Entertainment-Writer</fullName>
                </value>
                <value>
                    <fullName>Entertainment-Director</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Public Company</fullName>
                </value>
                <value>
                    <fullName>Private Equity</fullName>
                </value>
                <value>
                    <fullName>Venture Capital</fullName>
                </value>
                <value>
                    <fullName>Investment Banking</fullName>
                </value>
                <value>
                    <fullName>Heir</fullName>
                </value>
                <value>
                    <fullName>Aviation Operator Employee</fullName>
                </value>
                <value>
                    <fullName>Charter Brokerage Employee</fullName>
                </value>
                <value>
                    <fullName>Whole Aircraft Brokerage Employee</fullName>
                </value>
                <value>
                    <fullName>Aviation Services Employee</fullName>
                </value>
                <value>
                    <fullName>Concierge Rep</fullName>
                </value>
                <value>
                    <fullName>Travel Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Type_3__c</fullName>
        <label>User Type #3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Publicist</fullName>
                </value>
                <value>
                    <fullName>Sports Agent</fullName>
                </value>
                <value>
                    <fullName>Entertainment Agent</fullName>
                </value>
                <value>
                    <fullName>Entertainment Manager</fullName>
                </value>
                <value>
                    <fullName>Attorney-Entertainment</fullName>
                </value>
                <value>
                    <fullName>Attorney-Divorce</fullName>
                </value>
                <value>
                    <fullName>Attorney-Aviation</fullName>
                </value>
                <value>
                    <fullName>CPA/BizMgr</fullName>
                </value>
                <value>
                    <fullName>Wealth Advisor</fullName>
                </value>
                <value>
                    <fullName>Entertainment-NY</fullName>
                </value>
                <value>
                    <fullName>Entertainment-CA</fullName>
                </value>
                <value>
                    <fullName>Entertainment-Other</fullName>
                </value>
                <value>
                    <fullName>Entertainment-Executive</fullName>
                </value>
                <value>
                    <fullName>Entertainment-Producer</fullName>
                </value>
                <value>
                    <fullName>Entertainment-Actor</fullName>
                </value>
                <value>
                    <fullName>Entertainment-Writer</fullName>
                </value>
                <value>
                    <fullName>Entertainment-Director</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Public Company</fullName>
                </value>
                <value>
                    <fullName>Private Equity</fullName>
                </value>
                <value>
                    <fullName>Venture Capital</fullName>
                </value>
                <value>
                    <fullName>Investment Banking</fullName>
                </value>
                <value>
                    <fullName>Heir</fullName>
                </value>
                <value>
                    <fullName>Aviation Operator Employee</fullName>
                </value>
                <value>
                    <fullName>Charter Brokerage Employee</fullName>
                </value>
                <value>
                    <fullName>Whole Aircraft Brokerage Employee</fullName>
                </value>
                <value>
                    <fullName>Aviation Services Employee</fullName>
                </value>
                <value>
                    <fullName>Concierge Rep</fullName>
                </value>
                <value>
                    <fullName>Travel Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wealth_Advisor_1_Firm__c</fullName>
        <label>Wealth Advisor 1 Firm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOLDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wealth_Advisor_1_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wealth Advisor 1 Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Primary Wealth Advisor For</relationshipLabel>
        <relationshipName>PrimaryWealthAdvisorFor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wealth_Advisor_2_Firm__c</fullName>
        <label>Wealth Advisor 2 Firm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HOLDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wealth_Advisor_2_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wealth Advisor 2 Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Secondary Wealth Advisor For</relationshipLabel>
        <relationshipName>WealthAdvisor2Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wealth_Aquired_Via__c</fullName>
        <label>Wealth Aquired Via</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inheritance</fullName>
                </value>
                <value>
                    <fullName>Sold Company</fullName>
                </value>
                <value>
                    <fullName>Stock Options</fullName>
                </value>
                <value>
                    <fullName>High Paying Job</fullName>
                </value>
                <value>
                    <fullName>Investments-Financial</fullName>
                </value>
                <value>
                    <fullName>Investments-Real Estate</fullName>
                </value>
                <value>
                    <fullName>Divorce</fullName>
                </value>
                <value>
                    <fullName>Lottery</fullName>
                </value>
                <value>
                    <fullName>Private Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work__c</fullName>
        <label>Work #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Index__c</fullName>
        <label>Duplicate Check Index</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Web2Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Web2Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__IsCreatedByZoomApp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCreatedByZoomApp</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>JetNet_2016</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>JetNet 2016</value>
        </filters>
        <label>JetNet 2016</label>
        <sharedTo>
            <group>Current_AP_Employees</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>